# demo

./: .gitignore  ICU_LinkTestSuite.rar  ICU_LinkTestSuite0805.rar  ICU_LinkTestSuite0806.rar  ICU_LinkTestSuite0808.rar  README.md
ICU_LinkTestSuite/: .gitignore  Common.robot  icu_checksum.py  icu_debug.py  icu_error.py  icu_link_discard.py  icu_link_eak_payload.py  icu_link_packet.py  icu_link_session.py  icu_link_session_state.py  icu_link_spec.py  icu_link_syn_payload.py  icu_robot_soc.py  icu_serial.py  icu_serial_discard.py  icu_serial_port.py  icu_soc_app_ack.py  icu_soc_app_eak.py  icu_soc_app_fwc.py  icu_test_api.py  链路层测试用例_v1.0.0.xlsx
ICU_LinkTestSuite/Design/: design.vsdx
ICU_LinkTestSuite/SoC/: SoC_APP_ACK_I0001.robot  SoC_APP_ACK_I0002.robot  SoC_APP_ACK_I0003.robot  SoC_APP_ACK_I0004.robot  SoC_APP_ACK_I0005.robot  SoC_APP_ACK_IE001.robot  SoC_APP_ACK_N001.robot  SoC_APP_ACK_N002.robot  SoC_SNY-TWICE-N0001.robot  SoC_SNY_TWICE-N0001.robot  SoC_SNY_TWICE_N0002.robot  SoC_SYN_ONCE_FC001.robot  SoC_SYN_ONCE_FC002.robot  SoC_SYN_ONCE_FC003.robot  SoC_SYN_ONCE_I0001.robot  SoC_SYN_ONCE_I0006.robot  SoC_SYN_ONCE_I0007.robot  SoC_SYN_ONCE_IE001.robot
ICU_LinkTestSuite/SoC/SoC_APP_ACK/: SoC_APP_ACK_FC001.robot  SoC_APP_ACK_FC002.robot  SoC_APP_ACK_FC003.robot  SoC_APP_ACK_FC004.robot  SoC_APP_ACK_FC005.robot  SoC_APP_ACK_I0001.robot  SoC_APP_ACK_I0002.robot  SoC_APP_ACK_I0003.robot  SoC_APP_ACK_I0004.robot  (+23 more)
ICU_LinkTestSuite/Soc/: Soc_SYN_ONCE_I0003.robot  Soc_SYN_ONCE_N0001.robot  __init__.robot
fdk_aac_decode_raw/: CMakeLists.txt  fdk_aac_decode.c
(+45 files in other folders)
